# chatbud-be

./: .dockerignore  .gitignore  Dockerfile  Taskfile.yaml  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  shadcn.txt
.github/workflows/: deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 3506f9978118_create_projects_documents_and_chunks_.py  383bbab17eeb_change_embedding_dimension_to_768.py  83af49932a29_change_embedding_dimension_to_3072.py  b576e3179e8b_enable_pgvector_and_create_users_table.py
app/: main.py
app/core/: config.py  db.py
app/modules/auth/: deps.py  firebase.py
app/modules/chat/: llm.py  models.py  router.py  service.py
app/modules/documents/: __init__.py  model.py  repo.py  router.py  service.py
app/modules/projects/: __init__.py  model.py  repo.py  router.py
app/modules/rag/: __init__.py  chunker.py  embedder.py  model.py  repo.py  retreiver.py
app/modules/users/: __init__.py  model.py  repo.py  router.py
nginx/: nginx.conf  nginx.init.conf
scripts/: deploy-first-time.sh  server-setup.sh
